# AICanWinLottery

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRD-english-lotto-ai.md  PRD-korean-lotto-ai.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.omc/plans/: lotto-ai-implementation-plan.md  lotto-issue1-fix-plan.md
.omc/specs/: deep-interview-lotto-ai-implementation.md
.omc/ultragoal/: brief.md  goals.json  ledger.jsonl
apps/agent/: pyproject.toml
apps/agent/scripts/: generate_models.py
apps/agent/src/lotto_agent/: app.py  fallback.py  graph_explain.py  graph_run.py  llm.py  model_utils.py  schemas_generated.py  tracing.py
apps/agent/src/lotto_agent/tools/: http_tools.py
apps/agent/tests/: conftest.py  test_agent.py  test_http_tools.py  test_integration.py  test_nim_live.py
apps/api/: package.json  tsconfig.json
apps/api/src/: agentClient.test.ts  agentClient.ts  api.test.ts  server.test.ts  server.ts  service.ts
apps/web/: package.json  tsconfig.json  vitest.config.ts
apps/web/src/: api-client.ts  app-behavior.test.tsx  main.tsx  style.css  ui-source.test.ts
scripts/: agent-tools-httpx-only.mjs  build-seed.ts
scripts/ci/: check-codegen-drift.sh  run-live-nim.sh  set-github-nim-secret.sh
tmp/: code-review-20260618.md
